--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
+#weibo_username:     huxpro
+#zhihu_username:     huxpro
 #github_username:    huxpro
 #twitter_username:   huxpro
 #facebook_username:  huxpro
